# personalsite-ssg

./: '  .gitignore  .pdm-python  .prettierignore  .prettierrc  .rumdl.toml  README.md  \  _redirects  eleventy.config.js  eleventy.config.mjs  index.js  interaction  interaction.sh  netlify.toml  note  note.sh  package-lock.json  package.json  post  post.sh  pyproject.toml  robots.txt  send-wm  sitemap.xml  status  test.sh  webmentions.py  wiki  wm-endpoint
.cache/: eleventy-fetch-409cf382051729df4a7deb8f55f661  eleventy-fetch-409cf382051729df4a7deb8f55f661.json
_data/: site.json
_webmentioncache/: webmentions.json
media/: site.webmanifest
pages/: 404.liquid  404.md  ai-policy.md  bio.liquid  bio.md  blog.liquid  blogroll-opml.njk  blogroll.liquid  caw.md  code.liquid  code.md  contact.liquid  contact.md  downloads.liquid  feeds.liquid  feeds.md  fiction.liquid  humans.liquid  index.liquid  indieweb.liquid  interactions.liquid  likes.liquid  materials.liquid  media.liquid  music.md  notes.liquid  now.liquid  now.md  pages.json  projects.liquid  search.liquid  shop.liquid  sounds.liquid  supplemental.liquid  tag-posts.liquid  tags.liquid  uses.md  works.liquid
styles/: about.css  atom-styles.xsl  bibliography.css  blog.css  blogposts.css  feed.xsl  fiction.css  forms.css  global.css  index.css  interactions.js  menus.js  notes-photos.css  old-global.css  onecolumn.css  rss-styles.xsl  scripts.js  tables.css  unused-global.css  videogrid.css  works-table.css
templates/: blog-post-template.md  code-highlight.html  interaction-template.md  liked-template.md  (+5 more)
(+252 files in other folders)
